# genochar

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
envs/: GenoChar_python312.yml
genochar/: __init__.py  assembly_stats.py  cli.py  gff_stats.py  managed_envs.py  metadata.py  pipeline.py
