[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "GenoChar"
version = "0.6.1"
description = "GenoChar: single-command, summarize-first genome characterization workflow for bacterial and archaeal genomes"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "Jun Won Lee"}
]
keywords = [
  "bioinformatics",
  "genomics",
  "genome-assembly",
  "genome-annotation",
  "microbiology",
  "bacteria",
  "archaea",
  "checkm2",
  "prokka",
  "bakta",
]
dependencies = [
  "pandas>=2.0",
  "openpyxl>=3.1"
]

[project.urls]
Homepage = "https://github.com/ljunwon1114/GenoChar"
Issues = "https://github.com/ljunwon1114/GenoChar/issues"

[project.scripts]
genochar = "genochar.cli:main"

[tool.setuptools.packages.find]
include = ["genochar*"]
