[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "GenoChar"
version = "0.6.3.2"
description = "GenoChar: summarize-first genome characterization workflow with one-time managed setup for Prokka and CheckM2"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Jun Won Lee"}
]
keywords = [
  "bioinformatics",
  "genomics",
  "genome-assembly",
  "genome-annotation",
  "microbiology",
  "bacteria",
  "archaea",
  "checkm2",
  "prokka",
]
dependencies = [
  "pandas>=2.0",
  "openpyxl>=3.1"
]

[project.urls]
Homepage = "https://github.com/ljunwon1114/GenoChar"
Issues = "https://github.com/ljunwon1114/GenoChar/issues"

[project.scripts]
genochar = "genochar.cli:main"

[tool.setuptools.packages.find]
include = ["genochar*"]
